# FabricaNeeds_Back_Equipe5

./: env_exemplo.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/fabricaNeeds/: admin.py  apps.py  signals.py
core/fabricaNeeds/migrations/: 0001_initial.py  0002_alter_demandas_produto.py  0002_pagamentos_alter_demandas_produto.py  0003_pagamentos.py  0003_remove_demandas_nome_produto_alter_demandas_produto.py  0004_delete_retirarestoque.py  0004_pagamentos_data_aprovacao_pagamentos_data_pagamento_and_more.py  0005_demandas_produto_nao_cadastrado.py  0006_alter_demandas_produto_and_more.py  0007_remove_demandas_produto_nao_cadastrado_and_more.py
core/fabricaNeeds/models/: __init__.py  contribuicoes.py  demandas.py  pagamentos.py  retiradas.py  retirarEstoque.py
core/fabricaNeeds/serializers/: __init__.py  contribuicoes.py  demandas.py  entradasEstoque.py  estoque.py  login.py  pagamentos.py  retirarEstoque.py  total.py
core/fabricaNeeds/views/: __init__.py  contribuicoes.py  demandas.py  entradasEstoque.py  estoque.py  login.py  pagamentos.py  retirarEstoque.py  total.py
core/usuario/: admin.py  authentication.py  models.py  views.py
core/usuario/migrations/: 0001_initial.py  0002_usuario_github_username.py  0003_usuario_verified.py  0004_remove_usuario_verified_usuario_picture_and_more.py  0004_usuario_picture.py  0005_remove_usuario_name.py  0005_rename_github_username_usuario_github_token_and_more.py  (+4 more)
fabricaNeeds/: admin.py  aimeucu.py  callback_url.py  gitLogin.py
fabricaNeeds/migrations/: 0021_demandas_nome_produto.py  0022_alter_demandas_nome_produto_alter_demandas_produto_and_more.py  0023_contribuinte_token_contribuinte_verificado.py
fabricaNeeds/models/: __init__.py  contribuicoes.py  demandas.py  estoque.py  retiradas.py  retirarEstoque.py
fabricaNeeds/serializers/: __init__.py  contribuicoes.py
fabricaNeeds/views/: __init__.py  contribuicoes.py  login.py
usuario/: authentication.py  models.py
