[project]
name = "FabricaNeeds-Back-Equipe5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "django>=5.0.4",
    "djangorestframework>=3.15.2",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.1",
    "psycopg2>=2.9.9",
    "psycopg>=3.1.18",
    "psycopg2-binary>=2.9.9",
    "uvicorn>=0.29.0",
    "gunicorn>=22.0.0",
    "django-cors-headers>=4.4.0",
    "drf-spectacular>=0.27.2",
    "social-auth-app-django>=5.4.1",
    "dj-rest-auth>=6.0.0",
    "django-allauth>=0.63.3",
    "requests>=2.32.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

